--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,8 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Ropa+Sans&family=Rubik:wght@500&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Ropa+Sans&family=Rubik:wght@500&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap");
 .about-us-content {
@@ -804,10 +806,10 @@ p .index-inspire-change-text {
   border-radius: 4px;
   display: flex;
   flex-direction: column;
-  padding: 8px 8px 8px 1rem;
+  padding: 0.5rem 0.5rem 0.5rem 0.3rem;
   position: absolute;
   right: 3rem;
-  top: calc(9% + 10px);
+  top: calc(9% + 0.75rem);
   z-index: 1;
 }
 .dropdown-menu button {
@@ -816,6 +818,7 @@ p .index-inspire-change-text {
   color: #000;
   cursor: pointer;
   display: flex;
+  font-weight: bolder;
   margin: 0.7rem 0;
   padding: 0;
   position: relative;
@@ -865,12 +868,11 @@ p .index-inspire-change-text {
     height: 100%;
     justify-content: center;
   }
-  .login-button,
   .donate-button {
-    font-size: 0.75rem;
+    font-size: 1rem;
     font-weight: normal;
     height: 2rem;
-    margin-right: 5rem;
+    margin-right: 4rem;
     padding: 0.5rem;
   }
   .profile-picture {
@@ -890,7 +892,7 @@ p .index-inspire-change-text {
   .logo-bar {
     padding-left: 0.6rem;
     padding-top: 1rem;
-    width: 100%;
+    width: 90%;
   }
   .profile-picture {
     border-radius: 50%;
@@ -907,14 +909,8 @@ p .index-inspire-change-text {
   .tagline {
     font-size: 0.5rem;
   }
-  .logo-bar-right-content .login-button {
-    font-size: 0.75rem;
-    font-weight: normal;
-    height: 2rem;
-    padding: 1.25rem;
-  }
   .logo-bar-right-content .donate-button {
-    font-size: 0.75rem;
+    font-size: 1rem;
     padding: 1.25rem;
   }
   .profile-dropdown {
@@ -960,28 +956,6 @@ p .index-inspire-change-text {
 .nav-bar .nav-toggle {
   display: none;
 }
-@media (max-width: 76.5rem) {
-  .nav-bar .nav-toggle {
-    align-items: center;
-    cursor: pointer;
-    display: flex;
-    height: 100%;
-    margin-bottom: 0.5rem;
-    position: absolute;
-    right: 0.5rem;
-  }
-}
-.nav-bar .nav-toggle .icon {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  padding-bottom: 1rem;
-}
-.nav-bar .nav-toggle .icon svg {
-  fill: currentColor;
-  height: 3rem;
-  width: 3rem;
-}
 .nav-bar.mobile-nav .nav-links {
   align-items: flex-start;
   display: flex;
@@ -991,11 +965,31 @@ p .index-inspire-change-text {
 .nav-bar.mobile-nav .nav-links a {
   margin: 0 0 0.5rem;
 }
-.nav-bar.mobile-nav .nav-toggle .icon {
-  transform: rotate(180deg);
+
+.hide {
+  display: none;
 }
 
 @media (max-width: 76.5rem) {
+  .nav-bar .nav-toggle {
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    margin-bottom: 4.5rem;
+    margin-right: 0.5rem;
+    position: absolute;
+    right: 0.5rem;
+  }
+  .nav-bar .nav-toggle .icon {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+  .nav-bar .nav-toggle .icon svg {
+    fill: currentColor;
+    height: 3rem;
+    width: 3rem;
+  }
   .nav-bar .nav-links {
     background-color: #d3d3d3;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
@@ -1005,23 +999,14 @@ p .index-inspire-change-text {
     padding: 0.5rem;
     position: absolute;
     right: 0.5rem;
-    top: 10%;
+    top: 8%;
     z-index: 100;
   }
   .nav-bar.mobile-nav .nav-links.show-navlinks {
     display: flex;
   }
-  .nav-toggle {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    position: relative;
-  }
-  .nav-toggle .icon {
-    position: absolute;
-    right: 0.5rem;
-    top: 50%;
-    transform: translateY(-90%);
+  .hide {
+    display: grid;
   }
 }
 @media (max-width: 102.25rem) and (orientation: landscape) {
@@ -1034,11 +1019,14 @@ p .index-inspire-change-text {
     padding: 0.5rem;
     position: absolute;
     right: 0.5rem;
-    top: 28%;
+    top: 20%;
     z-index: 100;
   }
   .nav-bar.mobile-nav .nav-links.show-navlinks {
     display: flex;
+  }
+  .hide {
+    display: grid;
   }
 }
 .profile-content {
