Jira ticket fixes

--- a/styles/dontate.scss
+++ b/styles/dontate.scss
@@ -6,6 +6,12 @@
   margin-right: 2.5rem;
 }
 
+.donate-tax {
+  font-size: .9rem;
+  font-style: italic;
+  text-align: center;
+}
+
 .donorbox-images-container {
   display: flex;
   flex-direction: row;
@@ -32,6 +38,10 @@
 
 
 @media (max-width: 76.5rem) {
+  .donate-tax {
+    font-size: .5rem;
+  }
+
   .donorbox-images-container {
     display: flex;
     flex-direction: row;
