Added error handling for login, some style updates

--- a/styles/login.scss
+++ b/styles/login.scss
@@ -33,6 +33,7 @@
 }
 
 .sign-in-button {
+  border-radius: .5rem;
   font-family: RopaSans, sans-serif;
   margin-left: auto;
   margin-right: auto;
