--- a/styles/profile.scss
+++ b/styles/profile.scss
@@ -7,20 +7,18 @@
   grid-template-columns: 1fr 1fr;
 }
 
-.profile-picture {
+.profile-page-picture {
   align-items: center;
   display: flex;
   flex-direction: column;
-  grid-column: 2 / 3;
   justify-content: start;
 
   img {
     border: 2px solid $litterpic-green;
     border-radius: 50%;
-    height: 100px;
-    margin-right: 2rem;
+    height: 150px;
     object-fit: cover;
-    width: 100px;
+    width: 150px;
   }
 }
 
@@ -31,7 +29,6 @@
   color: $white;
   cursor: pointer;
   display: inline-block;
-  margin-right: 2rem;
   margin-top: .5rem;
   padding: .5rem 1rem;
   text-align: center;
@@ -66,6 +63,25 @@
 }
 
 @media (max-width: 76.5rem) {
+  .profile-page-picture {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+
+    img {
+      border: 2px solid $litterpic-green;
+      border-radius: 50%;
+      height: 100px;
+      object-fit: cover;
+      width: 100px;
+    }
+  }
+
+  .edit-profile-button {
+    font-size: 1rem;
+    width: auto;
+  }
 }
 
 @media (max-width: 102.25rem) and (orientation: landscape) {
