Added ability to create post, updated banner on About Us page

--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -43,10 +43,10 @@
 }
 
 .carousel-image {
-  height: 350px;
-  object-fit: cover;
+  height: 400px;
+  object-fit: contain;
   overflow: hidden;
-  width: 500px;
+  width: auto;
 }
 
 .carousel-chevron {
