--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -54,6 +54,7 @@
     align-items: center;
     display: flex;
     gap: 1rem;
+    height: 100%;
     margin-right: 1rem;
   }
 }
@@ -61,6 +62,7 @@
 .login-button,
 .donate-button {
   align-items: center;
+  align-self: center;
   background-color: $facebook-blue;
   border-radius: .5rem;
   color: $white;
@@ -81,6 +83,12 @@
   &:hover {
     background-color: $nav-green;
   }
+}
+
+.donate-button {
+  display: flex;
+  height: 2.5rem;
+  margin: auto 0;
 }
 
 .profile-picture-wrapper {
