--- a/styles/styles.css
+++ b/styles/styles.css
@@ -422,7 +422,7 @@
 
 .donorbox-widget {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   margin-bottom: 1.25rem;
 }
 
@@ -674,6 +674,28 @@ p .index-inspire-change-text {
   width: 18.75rem;
 }
 
+.image-row-container {
+  overflow: hidden;
+  position: relative;
+}
+
+.image-row__scroll-arrow {
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.image-row__scroll-arrow-icon {
+  color: #fff;
+  font-size: 36px;
+  font-weight: bolder;
+}
+.image-row__scroll-arrow-icon:hover {
+  color: #015e41;
+}
+
 .sign-in-form {
   display: flex;
   flex-direction: column;
@@ -759,12 +781,14 @@ p .index-inspire-change-text {
   align-items: center;
   display: flex;
   gap: 1rem;
+  height: 100%;
   margin-right: 1rem;
 }
 
 .login-button,
 .donate-button {
   align-items: center;
+  align-self: center;
   background-color: #4267b2;
   border-radius: 0.5rem;
   color: #fff;
@@ -785,6 +809,12 @@ p .index-inspire-change-text {
 .login-button:hover,
 .donate-button:hover {
   background-color: #479079;
+}
+
+.donate-button {
+  display: flex;
+  height: 2.5rem;
+  margin: auto 0;
 }
 
 .profile-picture-wrapper {
@@ -1429,9 +1459,11 @@ p .index-inspire-change-text {
 
 .community-service-button {
   border-radius: 0.5em;
-  display: block;
+  display: flex;
   font-family: RopaSans, sans-serif;
-  margin: 1.875rem auto 2.5rem;
+  justify-content: left;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
   padding: 0.6rem;
 }
 
