--- a/styles/home.scss
+++ b/styles/home.scss
@@ -129,7 +129,7 @@ p {
 
   .index-more-stories-button {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
 
     button {
       margin-bottom: 1rem;
