--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -47,7 +47,7 @@ h1 {
     color: $litterpic-green;
     font-size: 3rem;
     margin-bottom: 2.5rem;
-    text-align: start;
+    text-align: left;
   }
 }
 
@@ -154,7 +154,7 @@ textarea {
       color: $litterpic-green;
       font-size: 1.875rem;
       margin-bottom: 2.5rem;
-      text-align: start;
+      text-align: left;
     }
   }
 
