--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -16,10 +16,16 @@
 
   a {
     color: $black;
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     font-weight: bolder;
+    margin-left: .5rem;
+    margin-right: .5rem;
     text-decoration: none;
     transition: color .5s ease;
+
+    &:hover {
+      color: $litterpic-green;
+    }
   }
 
   .nav-link {
@@ -28,7 +34,7 @@
 
   .nav-links {
     display: flex;
-    position: relative; // Add this line
+    position: relative;
 
     a {
       background-color: transparent;
@@ -94,7 +100,7 @@
 
   .nav-bar .nav-links {
     background-color: $gray;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, .1);
     display: none;
     flex-direction: column;
     margin-top: .5rem;
