--- a/styles/profile.scss
+++ b/styles/profile.scss
@@ -11,7 +11,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
 
   img {
     border: 2px solid $litterpic-green;
@@ -67,7 +67,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
 
     img {
       border: 2px solid $litterpic-green;
@@ -84,6 +84,3 @@
   }
 }
 
-@media (max-width: 102.25rem) and (orientation: landscape) {
-  // Mobile Support
-}
