--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -53,12 +53,28 @@
   color: black;;
 }
 
-.like-count, .comment-count {
+.like-count,
+.comment-count {
   margin-left: 5px;
 }
 
 .fa-comment {
   margin-left: 10px;
+}
+
+.suggestion-item {
+  background-color: white;
+  cursor: pointer;
+  padding: .5rem;
+
+  &:hover {
+    background-color: $litterpic-green;
+  }
+
+  &.active {
+    background-color: $litterpic-green;
+    color: $white;
+  }
 }
 
 .post-carousel {
@@ -155,6 +171,7 @@
 
   button {
     border-radius: .5em;
+    margin-top: .5rem;
   }
 }
 
@@ -169,7 +186,7 @@
   }
 
   .post-user-name {
-    align-items: start;
+    align-items: flex-start;
   }
 
   .post-location {
@@ -224,7 +241,7 @@
   }
 
   .post-user-name {
-    align-items: start;
+    align-items: flex-start;
   }
 
   .post-location {
