--- a/styles/styles.css
+++ b/styles/styles.css
@@ -487,10 +487,10 @@
   text-align: center;
 }
 .footer-column-3 {
-  align-self: start;
+  align-self: flex-start;
 }
 .footer-column-3 a {
-  align-self: start;
+  align-self: flex-start;
   font-size: 16px;
   line-height: 1.75;
 }
@@ -636,7 +636,7 @@ p .index-inspire-change-text {
   }
   .index-more-stories-button {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
   }
   .index-more-stories-button button {
     margin-bottom: 1rem;
@@ -972,10 +972,15 @@ p .index-inspire-change-text {
 }
 .nav-bar a {
   color: #000;
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   font-weight: bolder;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
   text-decoration: none;
   transition: color 0.5s ease;
+}
+.nav-bar a:hover {
+  color: #015e41;
 }
 .nav-bar .nav-link {
   font-size: 1.5rem;
@@ -1080,7 +1085,7 @@ p .index-inspire-change-text {
   align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
 }
 .profile-page-picture img {
   border: 2px solid #015e41;
@@ -1132,7 +1137,7 @@ p .index-inspire-change-text {
     align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
   }
   .profile-page-picture img {
     border: 2px solid #015e41;
@@ -1267,12 +1272,26 @@ p .index-inspire-change-text {
   color: black;
 }
 
-.like-count, .comment-count {
+.like-count,
+.comment-count {
   margin-left: 5px;
 }
 
 .fa-comment {
   margin-left: 10px;
+}
+
+.suggestion-item {
+  background-color: white;
+  cursor: pointer;
+  padding: 0.5rem;
+}
+.suggestion-item:hover {
+  background-color: #015e41;
+}
+.suggestion-item.active {
+  background-color: #015e41;
+  color: #fff;
 }
 
 .post-carousel {
@@ -1365,6 +1384,7 @@ p .index-inspire-change-text {
 }
 .create-post-content button {
   border-radius: 0.5em;
+  margin-top: 0.5rem;
 }
 
 @media (max-width: 76.5rem) {
@@ -1377,7 +1397,7 @@ p .index-inspire-change-text {
     padding-top: 1rem;
   }
   .post-user-name {
-    align-items: start;
+    align-items: flex-start;
   }
   .post-location a {
     font-size: 0.75rem;
@@ -1420,7 +1440,7 @@ p .index-inspire-change-text {
     padding-top: 1rem;
   }
   .post-user-name {
-    align-items: start;
+    align-items: flex-start;
   }
   .post-location a {
     font-size: 0.75rem;
@@ -1590,7 +1610,7 @@ h1.heading-text {
   color: #015e41;
   font-size: 3rem;
   margin-bottom: 2.5rem;
-  text-align: start;
+  text-align: left;
 }
 
 h2 {
@@ -1687,7 +1707,7 @@ textarea {
     color: #015e41;
     font-size: 1.875rem;
     margin-bottom: 2.5rem;
-    text-align: start;
+    text-align: left;
   }
   .content {
     background-color: #fff;
