Updated post like display

--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -35,6 +35,7 @@
   .nav-links {
     display: flex;
     position: relative;
+    align-items: center;
 
     a {
       background-color: transparent;
