--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -45,13 +45,6 @@
   }
 }
 
-.filled-heart {
-  color: red;
-}
-
-.empty-heart {
-  color: black;;
-}
 
 .like-count,
 .comment-count {
@@ -61,6 +54,21 @@
 .fa-comment {
   margin-left: 10px;
 }
+
+.filled-comment {
+  color: $litterpic-green; /* Replace 'blue' with the desired color for the filled comment icon */
+}
+
+/* Style the filled heart icon (red) */
+.filled-heart {
+  color: red; /* Replace 'red' with the desired color for the filled heart */
+}
+
+/* Style the empty heart icon (border only) */
+.empty-heart svg {
+  border: 2px solid red; /* Replace 'red' with the desired color for the heart border */
+}
+
 
 .suggestion-item {
   background-color: white;
