--- a/styles/styles.css
+++ b/styles/styles.css
@@ -988,6 +988,7 @@ p .index-inspire-change-text {
 .nav-bar .nav-links {
   display: flex;
   position: relative;
+  align-items: center;
 }
 .nav-bar .nav-links a {
   background-color: transparent;
@@ -1264,14 +1265,6 @@ p .index-inspire-change-text {
   margin-left: 2rem;
 }
 
-.filled-heart {
-  color: red;
-}
-
-.empty-heart {
-  color: black;
-}
-
 .like-count,
 .comment-count {
   margin-left: 5px;
@@ -1279,6 +1272,20 @@ p .index-inspire-change-text {
 
 .fa-comment {
   margin-left: 10px;
+}
+
+.filled-comment {
+  color: #015e41; /* Replace 'blue' with the desired color for the filled comment icon */
+}
+
+/* Style the filled heart icon (red) */
+.filled-heart {
+  color: red; /* Replace 'red' with the desired color for the filled heart */
+}
+
+/* Style the empty heart icon (border only) */
+.empty-heart svg {
+  border: 2px solid red; /* Replace 'red' with the desired color for the heart border */
 }
 
 .suggestion-item {
