--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1275,21 +1275,19 @@ p .index-inspire-change-text {
 }
 
 .filled-comment {
-  color: #015e41; /* Replace 'blue' with the desired color for the filled comment icon */
+  color: #015e41;
 }
 
-/* Style the filled heart icon (red) */
 .filled-heart {
-  color: red; /* Replace 'red' with the desired color for the filled heart */
+  color: #f00;
 }
 
-/* Style the empty heart icon (border only) */
 .empty-heart svg {
-  border: 2px solid red; /* Replace 'red' with the desired color for the heart border */
+  border: 2px solid #f00;
 }
 
 .suggestion-item {
-  background-color: white;
+  background-color: #fff;
   cursor: pointer;
   padding: 0.5rem;
 }
@@ -1342,6 +1340,16 @@ p .index-inspire-change-text {
   padding-top: 1rem;
 }
 
+.post-time {
+  align-items: center;
+  display: flex;
+  font-size: 0.75rem;
+  grid-column: 3;
+  grid-row: 2;
+  justify-content: flex-end;
+  padding-right: 1rem;
+}
+
 .profile-image img {
   border-radius: 50%;
   height: 40px;
@@ -1359,7 +1367,7 @@ p .index-inspire-change-text {
   align-items: center;
   color: #00f;
   display: flex;
-  font-size: 1rem;
+  font-size: 0.75rem;
   justify-self: end;
   padding-right: 1rem;
 }
@@ -1404,7 +1412,10 @@ p .index-inspire-change-text {
     padding-top: 1rem;
   }
   .post-user-name {
-    align-items: flex-start;
+    align-items: center;
+    display: flex;
+    font-size: 0.75rem;
+    justify-content: center;
   }
   .post-location a {
     font-size: 0.75rem;
@@ -1447,7 +1458,10 @@ p .index-inspire-change-text {
     padding-top: 1rem;
   }
   .post-user-name {
-    align-items: flex-start;
+    align-items: center;
+    display: flex;
+    font-size: 0.75rem;
+    justify-content: center;
   }
   .post-location a {
     font-size: 0.75rem;
