Updated donate button test style and added initial RSVP logic

--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -87,6 +87,8 @@
 
 .donate-button {
   display: flex;
+  font-family: Rubik, Times, sans-serif;
+  font-size: 28px;
   height: 2.5rem;
   margin: auto 0;
 }
