--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -55,7 +55,6 @@
     display: flex;
     gap: 1rem;
     height: 100%;
-    margin-right: 1rem;
   }
 }
 
@@ -140,6 +139,16 @@
     margin: .7rem 0;
     padding: 0;
     position: relative;
+  }
+}
+
+@media (min-width: 76.5rem) {
+  .logo-bar {
+    margin-left: 10rem;
+  }
+
+  .logo-bar-right-content {
+    margin-right: 9rem;
   }
 }
 
@@ -248,6 +257,8 @@
   .logo-bar-right-content {
     .donate-button {
       font-size: 1rem;
+      margin-left: auto;
+      margin-right: auto;
       padding: 1.25rem;
     }
   }
