--- a/styles/dontate.scss
+++ b/styles/dontate.scss
@@ -35,8 +35,11 @@
   margin-bottom: 1.25rem;
 }
 
-
 @media (max-width: 76.5rem) {
+  .donorbox-images-container-desktop {
+    display: none;
+  }
+
   .donate-tax {
     font-size: .5rem;
   }
@@ -68,19 +71,25 @@
   .legal {
     margin-right: 2.5rem;
   }
-
 }
 
-@media (max-width: 102.25rem) and (orientation: landscape) {
 
-  .donorbox-container {
-    margin-top: .6rem;
+@media (min-width: 76.5rem) {
+  .donorbox-images-container {
+    display: none;
   }
 
+  .donorbox-images-container-desktop {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-  .donate-image {
-    height: auto;
-    justify-content: left;
-    width: 30%;
+  .donate-image-desktop {
+    height: 250px;
+    margin-left: 2rem;
+    margin-right: 1rem;
+    margin-top: 7rem;
+    width: auto;
   }
 }
