--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -96,6 +96,9 @@ form {
 input,
 select,
 textarea {
+  font-family: RopaSans, sans-serif;
+  font-size: 16px;
+  height: 2rem;
   margin-bottom: 1rem;
 }
 
