--- a/styles/styles.css
+++ b/styles/styles.css
@@ -178,18 +178,7 @@
 }
 
 #message {
-  height: 3.75rem;
-}
-
-.contact-input {
-  font-size: 1.1rem;
-  height: 3rem;
-  width: 25rem;
-}
-
-.contact-textarea {
-  height: 15rem;
-  width: 50%;
+  height: 5rem;
 }
 
 .form-row {
@@ -262,6 +251,10 @@
     display: flex;
     height: 70%;
     justify-content: center;
+  }
+  #message {
+    height: 3.75rem;
+    width: 100%;
   }
   .contact-container {
     background: linear-gradient(to bottom, #015e41, #000);
@@ -1791,6 +1784,9 @@ form {
 input,
 select,
 textarea {
+  font-family: RopaSans, sans-serif;
+  font-size: 16px;
+  height: 2rem;
   margin-bottom: 1rem;
 }
 
