--- a/styles/home.scss
+++ b/styles/home.scss
@@ -98,7 +98,8 @@ p {
     display: flex;
     flex-direction: column;
 
-    p {
+    p,
+    li {
       font-size: 1rem;
       margin-bottom: 1rem;
     }
