--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -125,8 +125,8 @@
   flex-direction: column;
   padding: .5rem .5rem .5rem .3rem;
   position: absolute;
-  right: 3rem;
-  top: calc(9% + .75rem);
+  right: 7rem;
+  top: calc(8% + 1rem);
   z-index: 1;
 
   button {
