--- a/styles/profile.scss
+++ b/styles/profile.scss
@@ -23,24 +23,35 @@
 }
 
 .edit-profile-button {
-  background-color: $litterpic-green;
-  border: 0;
-  border-radius: .5rem;
-  color: $white;
-  cursor: pointer;
-  display: inline-block;
+  cursor: not-allowed;
   margin-top: .5rem;
-  padding: .5rem 1rem;
-  text-align: center;
-  text-decoration: none;
-  width: 100px;
+  position: relative;
 
+  &::before {
+    background-color: $litterpic-green;
+    border-radius: 4px;
+    color: $white;
+    content: attr(data-tooltip);
+    font-size: 12px;
+    left: 50%;
+    opacity: 0;
+    padding: 8px 15px;
+    pointer-events: none;
+    position: absolute;
+    top: 20px;
+    transform: translateX(-50%);
+    visibility: hidden;
+    white-space: nowrap;
+  }
 
   &:hover {
-    background-color: $nav-green;
-    transition: background-color .5s ease;
+    &::before {
+      opacity: 1;
+      visibility: visible;
+    }
   }
 }
+
 
 .profile-info {
   display: flex;
@@ -62,6 +73,7 @@
   padding-left: .5rem;
 }
 
+
 @media (max-width: 76.5rem) {
   .profile-page-picture {
     align-items: center;
@@ -81,6 +93,10 @@
   .edit-profile-button {
     font-size: 1rem;
     width: auto;
+
+    &::before {
+      white-space: normal;
+    }
   }
 }
 
