--- a/styles/styles.css
+++ b/styles/styles.css
@@ -614,7 +614,8 @@ p .index-inspire-change-text {
     display: flex;
     flex-direction: column;
   }
-  .index-wrapper p {
+  .index-wrapper p,
+  .index-wrapper li {
     font-size: 1rem;
     margin-bottom: 1rem;
   }
@@ -853,8 +854,8 @@ p .index-inspire-change-text {
   flex-direction: column;
   padding: 0.5rem 0.5rem 0.5rem 0.3rem;
   position: absolute;
-  right: 3rem;
-  top: calc(9% + 0.75rem);
+  right: 7rem;
+  top: calc(8% + 1rem);
   z-index: 1;
 }
 .dropdown-menu button {
@@ -987,14 +988,14 @@ p .index-inspire-change-text {
 .nav-bar a {
   color: #000;
   font-size: 1.75rem;
-  font-weight: bolder;
+  font-weight: lighter;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
   text-decoration: none;
   transition: color 0.5s ease;
 }
 .nav-bar a:hover {
-  color: #015e41;
+  color: #4caf50;
 }
 .nav-bar .nav-link {
   font-size: 1.5rem;
@@ -1111,21 +1112,29 @@ p .index-inspire-change-text {
 }
 
 .edit-profile-button {
-  background-color: #015e41;
-  border: 0;
-  border-radius: 0.5rem;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
+  cursor: not-allowed;
   margin-top: 0.5rem;
-  padding: 0.5rem 1rem;
-  text-align: center;
-  text-decoration: none;
-  width: 100px;
+  position: relative;
 }
-.edit-profile-button:hover {
-  background-color: #479079;
-  transition: background-color 0.5s ease;
+.edit-profile-button::before {
+  background-color: #015e41;
+  border-radius: 4px;
+  color: #fff;
+  content: attr(data-tooltip);
+  font-size: 12px;
+  left: 50%;
+  opacity: 0;
+  padding: 8px 15px;
+  pointer-events: none;
+  position: absolute;
+  top: 20px;
+  transform: translateX(-50%);
+  visibility: hidden;
+  white-space: nowrap;
+}
+.edit-profile-button:hover::before {
+  opacity: 1;
+  visibility: visible;
 }
 
 .profile-info {
@@ -1164,6 +1173,9 @@ p .index-inspire-change-text {
   .edit-profile-button {
     font-size: 1rem;
     width: auto;
+  }
+  .edit-profile-button::before {
+    white-space: normal;
   }
 }
 .signup-form {
