--- a/styles/volunteer.scss
+++ b/styles/volunteer.scss
@@ -92,6 +92,7 @@
   grid-template-columns: 225px auto;
   grid-template-rows: auto;
 
+
   label[for='numberAttending'] {
     grid-column: 1;
     grid-row: 1;
@@ -183,6 +184,62 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: .5rem;
+}
+
+.event-form {
+  display: grid;
+  gap: 10px;
+  grid-template-rows: repeat(1, 1fr);
+}
+
+.form-row {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: auto 1fr;
+
+  &:first-child {
+    font-weight: bold;
+    padding-right: 3rem;
+    text-align: end;
+  }
+}
+
+textarea {
+  &.event-description-input {
+    min-height: 100px;
+    overflow-wrap: break-word;
+    resize: none;
+    width: 100%;
+  }
+}
+
+.location-input {
+  width: 100%;
+}
+
+.create-event-buttons {
+  display: flex;
+  grid-column: 1 / -1;
+  grid-row: 7;
+  justify-content: center;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+
+  .event-submit {
+    border-radius: .5rem;
+    margin-right: .5rem;
+  }
+
+  .event-submit-cancel {
+    border-radius: .5rem;
+    margin-left: .5rem;
+  }
+}
+
+.create-event-button {
+  border-radius: .5rem;
+  margin-bottom: .5rem;
+  width: 185px;
 }
 
 @media (max-width: 76.5rem) {
