Fixed email send on create event, updated create event and community service buttons to be same size and style

--- a/styles/volunteer.scss
+++ b/styles/volunteer.scss
@@ -7,13 +7,16 @@
 }
 
 .community-service-button {
+  align-items: center;
   border-radius: .5em;
   display: flex;
   font-family: RopaSans, sans-serif;
-  justify-content: left;
+  height: 2rem;
+  justify-content: center;
   margin-bottom: 1rem;
   margin-top: 1rem;
   padding: .6rem;
+  width: 195px;
 }
 
 // Volunteer Calendar
@@ -237,9 +240,16 @@ textarea {
 }
 
 .create-event-button {
+  align-items: center;
   border-radius: .5rem;
-  margin-bottom: .5rem;
-  width: 185px;
+  display: flex;
+  font-family: RopaSans, sans-serif;
+  height: 2rem;
+  justify-content: center;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  padding: .6rem;
+  width: 195px;
 }
 
 @media (max-width: 76.5rem) {
