--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -139,6 +139,9 @@
 }
 
 .profile-image {
+  display: flex;
+  justify-content: start;
+
   img {
     border-radius: 50%;
     height: 40px;
@@ -179,6 +182,7 @@
 .post-description {
   font-family: inherit;
   font-size: 1rem;
+  height: auto;
   padding: 1rem 2rem;
   width: auto;
 }
@@ -194,6 +198,11 @@
 }
 
 @media (max-width: 76.5rem) {
+  .profile-image {
+    justify-content: center;
+    padding-right: 0;
+  }
+
   .post-username-location {
     display: grid;
     grid-template-columns: 20% 40% 40%;
@@ -207,7 +216,7 @@
     align-items: center;
     display: flex;
     font-size: .75rem;
-    justify-content: center;
+    justify-content: start;
   }
 
   .post-location {
@@ -252,6 +261,11 @@
 
 
 @media (max-width: 102.25rem) and (orientation: landscape) {
+  .profile-image {
+    justify-content: center;
+    padding-right: 0;
+  }
+
   .post-username-location {
     display: grid;
     grid-template-columns: 20% 40% 40%;
@@ -265,7 +279,7 @@
     align-items: center;
     display: flex;
     font-size: .75rem;
-    justify-content: center;
+    justify-content: start;
   }
 
   .post-location {
