--- a/styles/volunteer.scss
+++ b/styles/volunteer.scss
@@ -284,6 +284,15 @@ textarea {
       font-size: .6rem;
       padding: .06rem;
     }
+
+    a {
+      font-size: .7rem;
+
+    }
+  }
+
+  .cancel-rsvp-button {
+    font-size: .5rem;
   }
 }
 
